--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "decimal64"
 version = "0.0.1"
 edition = "2021"
+license = "MIT"
 description = "TBC"
 readme = "./README.md"
 documentation = "https://docs.rs/decimal64"
