--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,25 +17,13 @@ jobs:
 
   msrv:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        features:
-          - "ws,mio,openssl"
-          - "ws,mio,rustls-webpki"
-          - "ws,mio,rustls-native"
     steps:
       - uses: actions/checkout@v4
       - uses: taiki-e/install-action@cargo-hack
-      - run: cargo hack check --rust-version --workspace --all-targets --features=${{ matrix.features }} --ignore-private
+      - run: cargo hack check --rust-version --workspace --all-targets --all-features --ignore-private
 
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        features:
-          - "ws,mio,openssl"
-          - "ws,mio,rustls-webpki"
-          - "ws,mio,rustls-native"
     steps:
       - uses: actions/checkout@v2
       - uses: actions/cache@v3
@@ -54,7 +42,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --features=${{ matrix.features }}
+          args: --all-features
 
   fmt:
     runs-on: ubuntu-latest
@@ -72,12 +60,6 @@ jobs:
 
   clippy:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        features:
-          - "ws,mio,openssl"
-          - "ws,mio,rustls-webpki"
-          - "ws,mio,rustls-native"
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
@@ -88,4 +70,4 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --no-deps --all-targets --features=${{ matrix.features }} -- -D warnings
+          args: --no-deps --all-targets --all-features -- -D warnings
